# moonycode

./: .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  LICENSE  Makefile  Makefile.gmake  README.md  build-packages.sh  chartype.cpp  chartype.h  codes.h  cpdetect.cpp  libcodes.sln  libcodes.vcxproj  libcodes.vcxproj.filters  moonycode.sln  moonycode.vcxproj  readme.md  regenerate.cmd  utf16_lo.cpp  utf16_up.cpp  utf16win.cpp  win_dos.cpp  win_iso.cpp  win_koi.cpp  win_mac.cpp
cmake/: MoonyCodeConfig.cmake
stat/: trigraph.cpp
test/: CMakeLists.txt  codes.test.cpp  codes.test.vcxproj  codes.test.vcxproj.filters  test.dos  test.iso  test.koi8  test.mac  test.utf16  test.utf16.up  test.utf8  test.win
text/: kondrashov.txt
umap/: CMakeLists.txt  createUmap.cpp
util/: mktypes.cpp  tritree.cpp
xlat/: one_one.cpp  utf16_lo.cpp  utf16_up.cpp  utf16win.cpp  win_dos.cpp  win_iso.cpp  win_koi.cpp  win_mac.cpp
